@@ -38,6 +38,8 @@ dpkg (1.16.1) UNRELEASED; urgency=low
     debian/source/patch-header. Closes: #629582
   * Changed dpkg-source --after-build to automatically unapply patches that it
     has applied during --before-build.
+  * Fix one possible cause for the assertion failure "pigp->trigpend_head".
+    LP: #798793
 
   [ Guillem Jover ]
   * Install deb-src-control(5) man pages in dpkg-dev. Closes: #620520
